fixing snap bar flicker

--- a/assets/scss/components/_snap_bar.scss
+++ b/assets/scss/components/_snap_bar.scss
@@ -75,6 +75,10 @@ body.docs #snap-bar ~ .docs-container .side-nav {
 }
 
 ionic-snap-bar {
+  &:not(.hydrated) {
+    display: none;
+  }
+
   @media (max-width: $screen-xs-max) {
     display: none;
   }
